js/src/tests/test262/built-ins/Promise/reject/S25.4.4.4_A2.1_T1.js
var
p
=
Promise
.
reject
(
3
)
;
if
(
!
(
p
instanceof
Promise
)
)
{
throw
new
Test262Error
(
"
Expected
Promise
.
reject
to
return
a
promise
.
"
)
;
}
p
.
then
(
function
(
)
{
throw
new
Test262Error
(
"
Promise
should
not
be
fulfilled
.
"
)
;
}
function
(
arg
)
{
if
(
arg
!
=
=
3
)
{
throw
new
Test262Error
(
"
Expected
promise
to
be
rejected
with
supplied
arg
got
"
+
arg
)
;
}
}
)
.
then
(
DONE
DONE
)
;
